--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "dev": "node ./bin/www"
   },
   "dependencies": {
     "await-to-js": "^2.0.1",
-    "bcrypt": "^1.0.3",
-    "bcrypt-promise": "^2.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
